Fixed Bug: Links on the blog dont break to a new line on mobile - improved text flow (#1648)
* fixed bug - links not breaking to a new line on mobile increased rowgap
* fixed bug - links not breaking to a new line on mobile improved link alignment
* removed useless CSS which broke link alignment
* removed additional nowrap code

--- a/css/style.css
+++ b/css/style.css
@@ -1263,20 +1263,22 @@ h2 a {
 @media (max-width: 500px) {
   #blog-doc {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
-    margin: 0;
+    margin-right: 0;
     padding-right: 10px;
   }
-  #blog-doc .blog-details + p {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+  
+
+
   #blog-doc .blog-details + p > img {
     margin-bottom: 15px;
   }
 }
+
+
+
 /* blog tablet and up*/
 @media (min-width: 768px) {
   .blog-post {
